@@ -1,3 +1,7 @@
+2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* m/intel386.h: Undo reactoring from previous change.
+
 2008-07-16  Jason Rumney  <jasonr@gnu.org>
 
         * w32gui.h: Repeat 26 June changes lost by last change.
@@ -58,8 +62,11 @@
 	Remove boilerplate comments.
 	* lisp.h (PNTR_COMPARISON_TYPE): Define it unconditionally.
 
+	* m/intel386.h (DATA_SEG_BITS): Remove definitions, only used on
+	USG systems which do not use DATA_SEG_BITS.
+	Refactor code.  Remove boilerplate comments.
+
 	* m/ibms390.h:
-	* m/intel386.h:
 	* m/m68k.h:
 	* s/bsd-common.h:
 	* s/cygwin.h:
